update image url

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <section id="about" class="container">
         <div class="slideshow-container">
-            <img class="slides" src="images/Profile.jpg" alt="Ajeet Raghuvanshi">
+            <img class="slides" src="./Images/Profile.jpg" alt="Ajeet Raghuvanshi">
         </div>
         <div class="about-text">
             <h2>About Me</h2>
